traefik_cert-manager_lets_encrypt/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-traefik-service
spec:
  selector:
    app: nginx-traefik
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
