traefik_cert-manager_lets_encrypt/dashboard.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute 
metadata: 
  name: traefik-dashboard
  namespace: traefik-system
spec:
  entryPoints:
    - web 
  routes:
    - match: Host(`traefik.gmaas.com.br`)
      kind: Rule 
      services:
        - name: api@internal 
          kind: TraefikService
