traefik_cert-manager_lets_encrypt/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute 
metadata:
  name: traefik-ingress-routes
spec: 
  entryPoints:
    - web 
  routes: 
    #- match: Host(`mydns.127.0.0.1.nip.io`) && Headers(`UserKey`, `teste`)
    #- match: Host(`mydns.127.0.0.1.nip.io`)
    - match: Host(`meusistema.com.br`)
    #- match: Host(`meusistema.com.br`) && Headers(`UserKey`, `teste`)
      kind: Rule 
      services:
        - name: nginx-traefik-service
          port: 80
      middlewares:
        - name: traefik-ingress-rate-limit
